--- a/source/index.html
+++ b/source/index.html
@@ -5,14 +5,47 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Описание проекта">
-  <title>ProjectName</title>
+  <meta name="description" content="ToDoList: список задач, которые нужно выполнить">
+  <title>ToDoList</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
   <div class="wrapper">
-
+    <main class="main">
+      <section class="tasks container">
+        <h1 class="tasks__title">Чек-листы</h1>
+        <div class="tasks__tabs-list tabs">
+          <button class="tabs__item is-active" type="button">Все задачи</button>
+          <button class="tabs__item" type="button">Активные</button>
+          <button class="tabs__item" type="button">Выполненные</button>
+          <button class="tabs__item tabs__item--add" type="button">+ добавить чек-лист</button>
+        </div>
+        <div class="tasks__checklist checklist">
+          <div class="checklist__header">
+            <h2 class="checklist__title">Чек-лист 1
+              <button class="checklist__button-rename" type="button">🖉</button>
+            </h2>
+            <button class="checklist__button-delete-checklist" type="button">Удалить чек-лист</button>
+          </div>
+          <ul class="checklist__list">
+            <li class="checklist__item">
+              <input type="checkbox"> Сделать кнопку
+              <button type="button">🗑️</button>
+            </li>
+            <li class="checklist__item">
+              <input type="checkbox"> Сделать кнопку
+              <button type="button">🗑️</button>
+            </li>
+            <li class="checklist__item">
+              <input type="checkbox" checked> Сделать кнопку
+              <button type="button">🗑️</button>
+            </li>
+          </ul>
+          <button class="checklist__button-add-checklist" type="button">+ добавить пункт</button>
+        </div>
+      </section>
+    </main>
   </div>
 
   <script src="js/main.min.js"></script>
