fix: исправляет разметку

--- a/source/index.html
+++ b/source/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="ToDoList: список задач, которые нужно выполнить">
   <title>ToDoList</title>
   <link rel="stylesheet" href="css/style.min.css">
@@ -16,33 +16,60 @@
       <section class="tasks container">
         <h1 class="tasks__title">Чек-листы</h1>
         <div class="tasks__tabs-list tabs">
-          <button class="tabs__item is-active" type="button">Все задачи</button>
-          <button class="tabs__item" type="button">Активные</button>
-          <button class="tabs__item" type="button">Выполненные</button>
-          <button class="tabs__item tabs__item--add" type="button">+ добавить чек-лист</button>
+          <button class="tabs__item btn is-active" type="button" data-tabs="tabs" data-sort="all">Все задачи</button>
+          <button class="tabs__item btn" type="button" data-tabs="tabs" data-sort="active">Активные</button>
+          <button class="tabs__item btn" type="button" data-tabs="tabs" data-sort="checked">Выполненные</button>
+          <button class="tabs__item btn btn--add-checklist" type="button" data-tabs="add">+ добавить чек-лист</button>
         </div>
         <div class="tasks__checklist checklist">
           <div class="checklist__header">
-            <h2 class="checklist__title">Чек-лист 1
-              <button class="checklist__button-rename" type="button">🖉</button>
-            </h2>
-            <button class="checklist__button-delete-checklist" type="button">Удалить чек-лист</button>
+            <div class="checklist__rename">
+              <h2 class="checklist__title" contenteditable>Чек-лист 1</h2>
+              <svg width="20" height="18" aria-hidden="true" focusable="false">
+                <use href="./img/sprite.svg#rename"></use>
+              </svg>
+            </div>
+            <button class="checklist__btn-delete-checklist btn btn--delete-checklist" type="button">Удалить чек-лист</button>
           </div>
           <ul class="checklist__list">
             <li class="checklist__item">
-              <input type="checkbox"> Сделать кнопку
-              <button type="button">🗑️</button>
+              <label>
+                <input type="checkbox">
+                <span class="checklist__custom-checkbox"></span>
+                <span contenteditable="false">Сделать кнопку</span>
+              </label>
+              <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
+                <svg width="20" height="26" aria-hidden="true" focusable="false">
+                  <use href="./img/sprite.svg#delete"></use>
+                </svg>
+              </button>
             </li>
             <li class="checklist__item">
-              <input type="checkbox"> Сделать кнопку
-              <button type="button">🗑️</button>
+              <label>
+                <input type="checkbox">
+                <span class="checklist__custom-checkbox"></span>
+                <span contenteditable="false">Сделать меню</span>
+              </label>
+              <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
+                <svg width="20" height="26" aria-hidden="true" focusable="false">
+                  <use href="./img/sprite.svg#delete"></use>
+                </svg>
+              </button>
             </li>
             <li class="checklist__item">
-              <input type="checkbox" checked> Сделать кнопку
-              <button type="button">🗑️</button>
+              <label>
+                <input type="checkbox" checked>
+                <span class="checklist__custom-checkbox"></span>
+                <span contenteditable="false">Сделать подвал</span>
+              </label>
+              <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
+                <svg width="20" height="26" aria-hidden="true" focusable="false">
+                  <use href="./img/sprite.svg#delete"></use>
+                </svg>
+              </button>
             </li>
           </ul>
-          <button class="checklist__button-add-checklist" type="button">+ добавить пункт</button>
+          <button class="checklist__btn-add-item btn btn--add-item" type="button">+ добавить пункт</button>
         </div>
       </section>
     </main>
