fix: добавляет исправление кастомному лэйблу

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
               <label>
                 <input type="checkbox">
                 <span class="checklist__custom-checkbox"></span>
-                <span contenteditable="false">Сделать кнопку</span>
+                <span class="checklist__custom-label" contenteditable="false">Сделать меню</span>
               </label>
               <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
                 <svg width="20" height="26" aria-hidden="true" focusable="false">
@@ -48,7 +48,7 @@
               <label>
                 <input type="checkbox">
                 <span class="checklist__custom-checkbox"></span>
-                <span contenteditable="false">Сделать меню</span>
+                <span class="checklist__custom-label" contenteditable="false">Сделать меню</span>
               </label>
               <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
                 <svg width="20" height="26" aria-hidden="true" focusable="false">
@@ -60,7 +60,7 @@
               <label>
                 <input type="checkbox" checked>
                 <span class="checklist__custom-checkbox"></span>
-                <span contenteditable="false">Сделать подвал</span>
+                <span class="checklist__custom-label" contenteditable="false">Сделать меню</span>
               </label>
               <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
                 <svg width="20" height="26" aria-hidden="true" focusable="false">
