feat: добавляет отложенную загрузку шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" href="./favicon.ico">
   <link rel="apple-touch-icon" href="./favicon/apple.png">
   <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="preload" href="./fonts/inter-light.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./fonts/inter-medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <meta name="description" content="ToDoList: список задач, которые нужно выполнить">
   <title>ToDoList</title>
   <link rel="stylesheet" href="css/style.min.css">
