fix: исправляет разметку

--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
               <label>
                 <input type="checkbox">
                 <span class="checklist__custom-checkbox"></span>
-                <span class="checklist__custom-label" contenteditable="false">Сделать меню</span>
+                <span class="checklist__custom-label" contenteditable="false">Сделать кнопку</span>
               </label>
               <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
                 <svg width="20" height="26" aria-hidden="true" focusable="false">
@@ -65,7 +65,7 @@
               <label>
                 <input type="checkbox" checked>
                 <span class="checklist__custom-checkbox"></span>
-                <span class="checklist__custom-label" contenteditable="false">Сделать меню</span>
+                <span class="checklist__custom-label" contenteditable="false">Сделать подвал</span>
               </label>
               <button class="checklist__btn-delete-item btn btn--delete-item" type="button">
                 <svg width="20" height="26" aria-hidden="true" focusable="false">
